--- a/02. LMS Website/frontend/package.json
+++ b/02. LMS Website/frontend/package.json
@@ -17,6 +17,7 @@
     "rc-progress": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.7.0",
     "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^11.0.5",
